--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Frontier DOOH 전국 DB v1.1.20</title>
+  <title>Frontier DOOH 전국 DB v1.1.21</title>
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
@@ -100,6 +100,50 @@
       flex:0 0 auto;
     }
     .pill b{color:var(--mint); font-weight:1000}
+
+    /* Load error banner */
+    .errBanner{
+      position:sticky;
+      top:calc(var(--topbarH) + 0px);
+      z-index:5600;
+      background:rgba(120, 20, 20, .22);
+      border-bottom:1px solid rgba(255,255,255,.10);
+      padding:10px 16px;
+      display:none;
+    }
+    .errBox{
+      max-width:1200px;
+      display:flex;
+      align-items:flex-start;
+      justify-content:space-between;
+      gap:12px;
+      margin:0 auto;
+      color:#ffdfdf;
+      font-size:12px;
+      line-height:1.45;
+    }
+    .errBox b{ color:#ffd1d1; font-weight:1000; }
+    .errBox code{
+      color:#ffdede;
+      background:rgba(0,0,0,.25);
+      border:1px solid rgba(255,255,255,.10);
+      padding:2px 6px;
+      border-radius:8px;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono","Courier New", monospace;
+      font-size:11px;
+      white-space:nowrap;
+    }
+    .errClose{
+      flex:0 0 auto;
+      height:34px;
+      padding:0 10px;
+      border-radius:10px;
+      border:1px solid rgba(255,255,255,.20);
+      background:rgba(0,0,0,.18);
+      color:#fff;
+      cursor:pointer;
+      font-weight:900;
+    }
 
     /* ===== FILTER BAR ===== */
     .filtersRow{
@@ -234,6 +278,7 @@
       html, body{overflow:auto;}
       body{overflow:auto;}
       .app{grid-template-columns: 1fr; grid-template-rows: 520px 1fr;}
+      .errBanner{ position:relative; top:auto; }
     }
 
     .panel{
@@ -868,8 +913,21 @@
 
 <body>
   <div class="topbar" id="topbar">
-    <div class="titleLeft" id="titleReset">Frontier DOOH 전국 DB <span class="ver">v1.1.20</span></div>
+    <div class="titleLeft" id="titleReset">Frontier DOOH 전국 DB <span class="ver">v1.1.21</span></div>
     <div class="pill">Loaded: <b id="pillLoaded">0</b></div>
+  </div>
+
+  <div class="errBanner" id="errBanner">
+    <div class="errBox">
+      <div style="min-width:0;">
+        <b>데이터 로드 실패</b>
+        <div style="margin-top:4px; color:rgba(255,255,255,.88);">
+          <span id="errMsg">-</span>
+          <span style="margin-left:8px;">(경로: <code id="errUrl">-</code>)</span>
+        </div>
+      </div>
+      <button class="errClose" id="errClose">닫기</button>
+    </div>
   </div>
 
   <div class="filtersRow" id="filtersRow">
@@ -1006,16 +1064,12 @@
   </div>
 
 <script>
-  /* ===========================
-     v1.1.20 변경 요약
-     1) 홈(초기화) bounds: 위로 7%, 좌로 10% 이동 반영
-        - north: 39.955 / south: 33.455 / west: 122.8 / east: 129.8
-     2) "슬롯머신/롤링" 체감 제거:
-        - hover 시 리스트 자동 스크롤 금지
-        - scrollIntoView smooth 제거(즉시 이동)
-        - 클릭(미니팝업/상세)에서만 필요한 경우에만 즉시 스크롤
-     3) 줌 8 유지(사용자 드래그/줌 후 강제 7로 내려가는 로직 없음)
-     =========================== */
+  /* =========================================================
+     Frontier DOOH v1.1.21
+     - 홈뷰: fitBounds 제거 -> "줌 8 고정" (7로 내려갈 여지 제거)
+     - 핀/클러스터/상세 등 "프로그램 이동"에서는 moveend로 리스트 재렌더 금지
+     - 랜덤(섞기) 정렬은 유지 (요청 유지)
+     ========================================================= */
 
   const DATA_URL = "./data_public.json";
 
@@ -1027,16 +1081,35 @@
     { high:"생활 밀착형 매체", lows:["엘리베이터 광고","병원","편의점","운동시설","캠퍼스","식당, 주점","약국","헤어&뷰티살롱","드럭스토어"] },
   ];
 
-  /* v1.1.20: 줌 8 */
+  /* v1.1.21: 홈뷰 bounds (요청값) */
   const HOME_ZOOM = 8;
 
-  /* v1.1.20: 초기화 범위(현 기준에서 위로 7%, 좌로 10% 이동) */
   const HOME_BOUNDS_FIXED = {
-    north: 39.955,
-    south: 33.455,
-    west: 122.800,
-    east: 129.800
+    north: 39.5,
+    south: 33.0,
+    west: 123.5,
+    east: 130.5
   };
+
+  /* 사용자가 원하는 “위로 7% / 좌로 10%” 보정 (bounds span 기준) */
+  const HOME_CENTER_SHIFT = {
+    upPct: 0.07,
+    leftPct: 0.10
+  };
+
+  function computeHomeCenter(){
+    const midLat = (HOME_BOUNDS_FIXED.north + HOME_BOUNDS_FIXED.south) / 2;
+    const midLng = (HOME_BOUNDS_FIXED.west + HOME_BOUNDS_FIXED.east) / 2;
+    const latSpan = (HOME_BOUNDS_FIXED.north - HOME_BOUNDS_FIXED.south);
+    const lngSpan = (HOME_BOUNDS_FIXED.east - HOME_BOUNDS_FIXED.west);
+
+    const latShift = latSpan * HOME_CENTER_SHIFT.upPct;     // 위로 이동: +lat
+    const lngShift = lngSpan * HOME_CENTER_SHIFT.leftPct;   // 좌로 이동: -lng
+
+    return [ midLat + latShift, midLng - lngShift ];
+  }
+
+  const HOME_CENTER = computeHomeCenter();
 
   let ALL = [];
   let map = null;
@@ -1056,8 +1129,11 @@
   let suppressHashHandler = false;
 
   let highlightedClusterEl = null;
-
   let isMapInteracting = false;
+
+  /* v1.1.21: 프로그램 이동(핀 클릭/클러스터 클릭/상세열기/홈뷰 등)에서는
+     moveend로 리스트 재렌더(=다른 리스트로 바뀌는 현상) 1회 차단 */
+  let suspendViewportOnce = false;
 
   /* 검색(렉 제거): 입력은 미리보기만, 적용은 Enter/돋보기 클릭 */
   let activeQuery = "";
@@ -1088,6 +1164,15 @@
 
   const $ = (id) => document.getElementById(id);
 
+  function showErrorBanner(msg){
+    $("errMsg").textContent = msg || "알 수 없는 오류";
+    $("errUrl").textContent = DATA_URL;
+    $("errBanner").style.display = "block";
+  }
+  function hideErrorBanner(){
+    $("errBanner").style.display = "none";
+  }
+
   function addOption(sel, value, label){
     const o = document.createElement("option");
     o.value = value;
@@ -1110,7 +1195,6 @@
   }
   function stripDigits(s){ return (s ?? "").toString().replace(/[0-9]/g,""); }
 
-  /* 단어(토큰) 추출 */
   function extractTokens(text){
     const s = (text ?? "").toString();
     const m = s.match(/[가-힣A-Za-z0-9]+/g);
@@ -1154,7 +1238,7 @@
     return (t ?? "").toString().replace(/(역)$/,"");
   }
 
-  /* 짧은 지명 보호(“대구”가 “해운대구”에 포함되는 오탐 차단) */
+  /* 짧은 지명 보호 */
   const PROTECT_SHORT_NORM = new Set([
     searchNorm("대구"), searchNorm("대전"), searchNorm("부산"), searchNorm("광주"),
     searchNorm("울산"), searchNorm("인천"), searchNorm("서울"), searchNorm("세종")
@@ -1393,7 +1477,6 @@
     return /(특별시|광역시|자치시|도|시|군|구|읍|면|동|리|가)$/.test(s);
   }
 
-  /* 토큰 단위 prefix 중심 매칭 + 짧은 지명 포함매칭 제한 */
   function tokenMatchItem(tok, it){
     const raw = (tok ?? "").toString().trim();
     if (!raw) return true;
@@ -1407,7 +1490,6 @@
     const tns = it._tokNorms || [];
     const tjs = it._tokJamos || [];
 
-    // 1) 토큰 prefix
     if (qn){
       for (const tn of tns){
         if (tn && tn.startsWith(qn)) return true;
@@ -1419,7 +1501,6 @@
       }
     }
 
-    // 2) 토큰 contains (긴 쿼리만 + 보호 대상 제외)
     if (!protectedShort){
       if (qn && qn.length >= 3){
         for (const tn of tns){
@@ -1433,16 +1514,13 @@
       }
     }
 
-    // 3) 레거시 블롭 contains (긴 쿼리만 + 보호 대상 제외)
     if (!protectedShort){
       if (qj && qj.length >= 6 && it._jamo && it._jamo.includes(qj)) return true;
       if (qn && qn.length >= 3 && it._blob && it._blob.includes(qn)) return true;
     }
 
-    // 4) 행정구역 토큰은 느슨 변형 금지
     if (isAdminSuffixToken(raw)) return false;
 
-    // 5) 변형 토큰 허용(도로/역 등) - 보호 대상 제외
     if (!protectedShort){
       const vars = tokenVariantsForLoose(raw);
       const blob = it._blob || "";
@@ -1465,53 +1543,6 @@
 
     if (high) arr = arr.filter(x => x._high === high);
     return arr;
-  }
-
-  function boundsAll(items){
-    const pts = items.slice(0, 2500);
-    if (!pts.length) return null;
-    const b = L.latLngBounds([]);
-    for (const it of pts){
-      const la = (it._latDisp ?? it.lat);
-      const ln = (it._lngDisp ?? it.lng);
-      b.extend([la, ln]);
-    }
-    return b.isValid() ? b : null;
-  }
-
-  function getHomePadding(){
-    const sideW = parseInt(getComputedStyle(document.documentElement).getPropertyValue("--sideW")) || 268;
-    return {
-      paddingTopLeft: L.point(58, 54),
-      paddingBottomRight: L.point(sideW + 88, 86)
-    };
-  }
-
-  /* v1.1.20: 초기화는 고정 bounds를 "딱" 적용 (flyToBounds 사용하지 않음) */
-  function getFixedHomeBounds(){
-    const b = L.latLngBounds(
-      [HOME_BOUNDS_FIXED.south, HOME_BOUNDS_FIXED.west],
-      [HOME_BOUNDS_FIXED.north, HOME_BOUNDS_FIXED.east]
-    );
-    return b.isValid() ? b : null;
-  }
-
-  function applyHomeView(animate){
-    if (!map) return;
-
-    const pad = getHomePadding();
-    const bb = getFixedHomeBounds();
-
-    if (bb){
-      // "딱" 맞춰서 한 번에 이동: animate=false 권장
-      map.fitBounds(bb, { ...pad, animate: !!animate, maxZoom: HOME_ZOOM });
-    }else{
-      map.setView([36.25, 127.8], HOME_ZOOM, { animate: !!animate });
-    }
-
-    // 홈뷰 적용 직후 UI 갱신
-    updateZoomUI();
-    viewportUpdate();
   }
 
   /* ===== ICONS ===== */
@@ -1576,8 +1607,8 @@
     if (!el) return;
     el.classList.add("isActive");
     if (doScroll){
-      // v1.1.20: smooth 제거(롤링 체감 제거) => 즉시 이동
-      el.scrollIntoView({ block:"center", behavior:"auto" });
+      // v1.1.21: “롤링/슬롯머신 느낌” 방지 -> 즉시 이동, 상단 기준
+      el.scrollIntoView({ block:"start", behavior:"auto" });
     }
   }
   function unhighlightCard(key){
@@ -1616,6 +1647,8 @@
     if (prev) updateMarkerVisual(prev);
     if (next) updateMarkerVisual(next);
   }
+
+  let currentOpenKeyPrev = null;
 
   function ensureCardVisible(key){
     if (cardByKey.has(key)) return;
@@ -1703,8 +1736,6 @@
 
     clearAllCardHighlights();
     ensureCardVisible(it._key);
-
-    // v1.1.20: 클릭(미니팝업)에서는 "즉시" 스크롤만 허용
     highlightCard(it._key, true);
 
     try{
@@ -1743,10 +1774,9 @@
         setHoverKey(it._key);
         highlightClusterOnlyByKey(it._key);
 
-        // v1.1.20 핵심: hover에서는 리스트 자동 스크롤 금지(롤링 체감 제거)
         clearAllCardHighlights();
         ensureCardVisible(it._key);
-        highlightCard(it._key, false); // doScroll=false
+        highlightCard(it._key, true);
       });
 
       m.on("mouseout", () => {
@@ -1765,6 +1795,13 @@
             L.DomEvent.preventDefault(ev.originalEvent);
           }
         }catch(_){}
+
+        // v1.1.21: 핀 클릭으로 지도만 살짝 이동할 때 moveend로 리스트가 바뀌지 않게 1회 차단
+        suspendViewportOnce = true;
+        map.once("moveend", () => {
+          suspendViewportOnce = false;
+          updateZoomUI();
+        });
 
         try{
           map.panTo(m.getLatLng(), { animate:true, duration:0.35 });
@@ -1843,9 +1880,16 @@
 
     $("dOverlay").style.display = "block";
 
+    // v1.1.21: 상세로 들어가며 줌/센터 이동은 하되, 그 moveend로 리스트가 재구성되지는 않게 차단
+    suspendViewportOnce = true;
+    map.once("moveend", () => {
+      suspendViewportOnce = false;
+      updateZoomUI();
+    });
+
     const la = (it._latDisp ?? it.lat);
     const ln = (it._lngDisp ?? it.lng);
-    map.setView([la, ln], Math.max(map.getZoom(), 15));
+    map.setView([la, ln], Math.max(map.getZoom(), 15), { animate:false });
 
     saveRecentKey(it._key);
 
@@ -1898,7 +1942,6 @@
     const list = $("list");
     let arr = items.slice();
 
-    // 랜덤/섞기 정렬 유지(법적 리스크 완화 목적) — seed 기반 stable shuffle
     if (isNeutralState()){
       arr.sort((a,b) => (stableHash(shuffleSeed, a._key) - stableHash(shuffleSeed, b._key)));
     }
@@ -1937,7 +1980,6 @@
         highlightCard(it._key, false);
         setHoverKey(it._key);
         highlightClusterOnlyByKey(it._key);
-        // v1.1.20: hover에서는 자동 스크롤 금지
       });
       el.addEventListener("mouseleave", () => {
         unhighlightCard(it._key);
@@ -2151,6 +2193,21 @@
     return true;
   }
 
+  function renderMarkersAndListFromBase(base){
+    curBase = base;
+
+    if (currentOpenKey){
+      const exists = base.some(x => x._key === currentOpenKey);
+      if (!exists) closeDetail(false);
+    }
+
+    $("mAll").textContent = ALL.length;
+    $("mFilter").textContent = base.length;
+
+    renderMarkers(base);
+    viewportUpdate();
+  }
+
   function viewportUpdate(){
     if (!map) return;
     const b = map.getBounds();
@@ -2200,29 +2257,9 @@
     hint.style.display = "none";
   }
 
-  function fullRender(shouldFit){
-    const base = getFilteredBase();
-    curBase = base;
-
-    if (currentOpenKey){
-      const exists = base.some(x => x._key === currentOpenKey);
-      if (!exists) closeDetail(false);
-    }
-
-    $("mAll").textContent = ALL.length;
-    $("mFilter").textContent = base.length;
-
-    renderMarkers(base);
-    viewportUpdate();
-
-    if (shouldFit && base.length){
-      const bb = boundsAll(base);
-      if (bb) map.fitBounds(bb, { padding:[60,60], maxZoom: 14 });
-    }
-  }
-
   function buildMap(){
-    map = L.map("map", { zoomControl:false }).setView([36.25, 127.8], HOME_ZOOM);
+    // v1.1.21: 최초 setView는 HOME_CENTER + HOME_ZOOM (줌 8 고정)
+    map = L.map("map", { zoomControl:false }).setView(HOME_CENTER, HOME_ZOOM);
 
     L.tileLayer("https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png", {
       maxZoom: 19,
@@ -2251,7 +2288,7 @@
       hideClusterHint();
     });
 
-    // 클러스터 클릭: 자연스럽게 확대/중앙 이동
+    // 클러스터 클릭: 확대/중앙 이동 (단, moveend로 리스트 자동 재렌더는 하지 않게 차단)
     markers.on("clusterclick", (e) => {
       try{
         if (e && e.originalEvent){
@@ -2266,13 +2303,19 @@
       clearAllCardHighlights();
       clearClusterHighlight();
 
+      suspendViewportOnce = true;
+      map.once("moveend", () => {
+        suspendViewportOnce = false;
+        updateZoomUI();
+      });
+
       const bb = e.layer && e.layer.getBounds ? e.layer.getBounds() : null;
 
       if (bb && bb.isValid && bb.isValid()){
         map.fitBounds(bb, { padding:[90,90], maxZoom: 18 });
       }else if (e.layer && e.layer.getLatLng){
         const ll = e.layer.getLatLng();
-        map.setView(ll, Math.min(map.getZoom() + 2, 18));
+        map.setView(ll, Math.min(map.getZoom() + 2, 18), { animate:false });
       }
     });
 
@@ -2297,7 +2340,11 @@
       clearAllCardHighlights();
     }, { passive:true });
 
-    map.on("moveend", () => viewportUpdate());
+    map.on("moveend", () => {
+      // v1.1.21: 프로그램 이동(핀/클러스터/상세/홈뷰 등)일 때는 리스트 자동갱신 금지
+      if (suspendViewportOnce) return;
+      viewportUpdate();
+    });
   }
 
   function loadRecentAndCart(){
@@ -2468,7 +2515,29 @@
     const qVal = $("q").value.trim();
     activeQuery = qVal;
     saveQueryHistory(activeQuery);
-    fullRender(true);
+    const base = getFilteredBase();
+    renderMarkersAndListFromBase(base);
+  }
+
+  function applyHomeView(animate){
+    if (!map) return;
+
+    // 홈뷰는 “프로그램 이동”이므로, moveend에서 리스트 자동갱신 금지
+    suspendViewportOnce = true;
+
+    try{
+      if (animate){
+        map.flyTo(HOME_CENTER, HOME_ZOOM, { duration: 0.85 });
+      }else{
+        map.setView(HOME_CENTER, HOME_ZOOM, { animate:false });
+      }
+    }catch(_){}
+
+    map.once("moveend", () => {
+      suspendViewportOnce = false;
+      updateZoomUI();
+      viewportUpdate(); // 홈뷰에서는 1회만 갱신
+    });
   }
 
   function resetAll(){
@@ -2481,19 +2550,38 @@
 
     shuffleSeed = Math.random();
 
-    applyHomeView(false); // v1.1.20: 초기화는 "딱" 맞춤(기본 animate=false)
-    fullRender(false);
+    applyHomeView(true);
+
+    const base = getFilteredBase(); // = ALL
+    renderMarkersAndListFromBase(base);
+  }
+
+  async function fetchJsonRobust(url){
+    const res = await fetch(url, { cache:"no-store" });
+
+    if (!res.ok){
+      const text = await res.text().catch(()=> "");
+      throw new Error(`HTTP ${res.status} ${res.statusText} (응답 일부: ${text.slice(0, 80)})`);
+    }
+
+    // GitHub Pages에서 content-type이 애매할 수 있어, text로 받아서 JSON 파싱을 한 번 더 안전하게 처리
+    const raw = await res.text();
+    try{
+      return JSON.parse(raw);
+    }catch(e){
+      // HTML이 돌아오는 흔한 케이스(404 페이지 등)
+      const head = raw.slice(0, 120).replace(/\s+/g," ").trim();
+      throw new Error(`JSON 파싱 실패 (응답 시작: ${head})`);
+    }
   }
 
   async function init(){
     updateStickyHeights();
     window.addEventListener("resize", () => {
       updateStickyHeights();
-      // 화면 크기 변경 시 패딩이 달라질 수 있으므로 중립 상태면 홈뷰를 다시 맞춤(딱)
-      if (isNeutralState() && map){
-        applyHomeView(false);
-      }
     });
+
+    $("errClose").addEventListener("click", hideErrorBanner);
 
     buildMap();
     setupInfiniteScroll();
@@ -2513,38 +2601,23 @@
       openDetail(it, true);
     }, true);
 
-    // 데이터 로드 (로드 실패 방어 + UI 유지)
-    let json = null;
+    // (1) 데이터 로드 (실패해도 UI는 유지)
+    let items = [];
     try{
-      const res = await fetch(DATA_URL, { cache:"no-store" });
-      if (!res.ok){
-        throw new Error(`DATA HTTP ${res.status}`);
-      }
-      json = await res.json();
+      const json = await fetchJsonRobust(DATA_URL);
+      items = Array.isArray(json) ? json : (json.items || []);
+      hideErrorBanner();
     }catch(err){
       console.error("[DATA LOAD FAIL]", err);
-
-      // UI는 유지하고, 상단 pill에 에러를 명시
-      $("pillLoaded").textContent = "0";
-      $("pillLoaded").style.color = "#ff8a8a";
-      $("pillLoaded").title = "data_public.json 로드 실패. Network 탭에서 data_public.json 상태/Response 확인 필요.";
-
-      setCatHighOptions();
-      buildSuggestPool();
-      loadRecentAndCart();
-      renderRecentPanel();
-      renderCartSummary();
-
-      // 홈뷰만 잡아두고 종료
-      applyHomeView(false);
-      updateZoomUI();
-      return;
+      showErrorBanner(err?.message || "data 로드 실패");
+      items = []; // 빈 배열로 계속 진행
     }
-
-    const items = Array.isArray(json) ? json : (json.items || []);
 
     const pts = items.filter(x => {
       if (typeof x.lat !== "number" || typeof x.lng !== "number") return false;
+      // 한국 주변 대략 필터 (원본 유지)
+      if (x.lat < 32.0 || x.lat > 39.8) return false;
+      if (x.lng < 123.0 || x.lng > 132.5) return false;
       return true;
     });
 
@@ -2556,7 +2629,6 @@
       row._blob = searchNorm(row._blobText);
       row._jamo = toJamo(row._blobText);
 
-      // 토큰 캐시
       const toks = extractTokens(row._blobText);
       row._tokNorms = toks.map(x => searchNorm(x)).filter(Boolean);
       row._tokJamos = toks.map(x => toJamo(x)).filter(Boolean);
@@ -2579,7 +2651,7 @@
     renderRecentPanel();
     renderCartSummary();
 
-    // 최초 홈뷰 적용(딱)
+    // (2) 홈뷰 적용: "줌 8 고정" + center 보정 반영
     applyHomeView(false);
 
     // Zoom UI init
@@ -2611,7 +2683,10 @@
     });
 
     // filters
-    $("catHigh").addEventListener("change", () => fullRender(true));
+    $("catHigh").addEventListener("change", () => {
+      const base = getFilteredBase();
+      renderMarkersAndListFromBase(base);
+    });
 
     const q = $("q");
     const qBox = $("qSuggest");
@@ -2628,7 +2703,7 @@
       }
     });
 
-    // 입력 시: 지도/리스트 갱신 금지, 자동완성만 업데이트
+    // 입력 시: 자동완성만 업데이트
     let sugTimer = null;
     q.addEventListener("input", () => {
       clearTimeout(sugTimer);
@@ -2649,7 +2724,6 @@
         sugIndex = -1;
         return;
       }
-      // 백스페이스 초기화: 입력창이 비어있고 backspace면 reset과 동일
       if (e.key === "Backspace" && !q.value){
         e.preventDefault();
         resetAll();
@@ -2685,19 +2759,12 @@
     });
 
     // 최초 렌더
-    fullRender(false);
+    const base = getFilteredBase();
+    renderMarkersAndListFromBase(base);
     openDetailByHash();
   }
 
   init();
-
-  /* ========== 변경사항 확인 요청(업무지시 #1 반영) ==========
-     아래 4가지를 확인 후 결과를 알려주세요.
-     1) 초기화 버튼 클릭 시: 지도가 새 bounds(39.955/33.455/122.8/129.8) 느낌으로 "딱" 이동하는가?
-     2) 지도에서 핀/클러스터에 마우스만 올릴 때: 리스트가 스르륵 자동 스크롤(롤링)하지 않는가?
-     3) 클릭(핀 클릭/상세 열기)에서는 리스트가 필요 시 즉시(부드럽지 않게) 이동하는가?
-     4) 드래그/줌 조작 후에도 줌이 임의로 7로 내려가지는 않는가?
-  ========================================================= */
 </script>
 </body>
 </html>
